# particle-sim

./: .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp  shader.h
src/components/: physics.h  properties.h  transform.h
src/controller/: app.cpp  app.h  entity_manager.cpp  entity_manager.h  physics_world.cpp  physics_world.h
src/shaders/: circle_instance.frag.glsl  circle_instance.vert.glsl
src/systems/: collision_system.cpp  collision_system.h  motion_system.cpp  motion_system.h  render_system.cpp  render_system.h
